bubble chart data loads in animated, colour picker functional

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -441,7 +441,8 @@ svg {
 \*-------------------------------------------*/
 
 .bubbles:hover {
-  stroke: black;
+  stroke: white;
+  stroke-width: 2px;
 }
 
 /*-------------------------------------------*\
