--- a/docs/styles.css
+++ b/docs/styles.css
@@ -320,7 +320,7 @@ hr {
 }
 
 .tablet-details p {
-  padding: 0 15px;
+  padding: 15px 15px;
 }
 
 .desktop-details {
@@ -328,7 +328,7 @@ hr {
 }
 
 .desktop-details p {
-  padding: 0 15px;
+  padding: 5px 15px;
 }
 
 
@@ -383,14 +383,14 @@ a {
 #nextBtn {
   z-index: 99;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 1.5em;
   font-weight: 700;
-  background-color: rgb(255 255 255 / 85%);
+  background-color: rgb(255 255 255 / 65%);
   border: 0;
   border-radius: 50%;
   outline: none;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   transition: 0.6s ease;
   padding: 2px;
   box-shadow: 1px 1px 7px #b9b9b9;
@@ -403,7 +403,7 @@ a {
 }
 
 /*-------------------------------------------*\
-        			INTERACT.HTML
+          INTERACT.HTML / CHARTS.JS
 \*-------------------------------------------*/
 .chart-container {
   display: flex;
@@ -435,15 +435,33 @@ svg {
   margin: auto;
 }
 
-
-/*-------------------------------------------*\
-        					D3.JS
-\*-------------------------------------------*/
-
 .bubbles:hover {
   stroke: white;
   stroke-width: 2px;
 }
+
+#loader {
+	font-size: 3em;
+	width: 2em;
+	height: 2em;
+	box-sizing: border-box;
+	border-style: solid;
+	border-width: 0.3em;
+  border-color: hsl(348deg 83% 47%) white;
+  border-radius: 50%;
+	position: fixed;
+	left: calc(50vw - 0.5em);
+	top: calc(40vw - 0.5em);
+	display: block;
+  animation: spin 2s linear infinite;
+	transition: 0.5s;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 
 /*-------------------------------------------*\
         			   FOOTER
@@ -559,7 +577,7 @@ footer {
     display: flex;
     flex-direction: column;
     max-width: 300px;
-    margin-top: 55px;
+    margin-top: 35px;
   }
 
   .cta-container {
