--- a/docs/styles.css
+++ b/docs/styles.css
@@ -250,7 +250,7 @@ hr {
   background-image: linear-gradient(76deg, #161616 20%, #303030 74%);
   transition: all 0.3s ease;
   border-radius: 30px;
-  margin: 15px 20px;
+  margin: 15px 20px 50px;
   padding: 20px;
   min-width: 200px;
   min-height: 350px;
@@ -405,7 +405,8 @@ a {
 /*-------------------------------------------*\
           INTERACT.HTML / CHARTS.JS
 \*-------------------------------------------*/
-.chart-container {
+.chart-container,
+.movie-container {
   display: flex;
   flex-direction: column;
   background-image: linear-gradient(76deg, #161616 20%, #303030 74%);
@@ -449,9 +450,10 @@ svg {
 	border-width: 0.3em;
   border-color: hsl(348deg 83% 47%) white;
   border-radius: 50%;
-	position: fixed;
-	left: calc(50vw - 0.5em);
-	top: calc(40vw - 0.5em);
+	/* position: fixed; */
+	/* left: calc(50vw - 0.5em); */
+	/* top: calc(40vw - 0.5em); */
+  margin: 100px 700px;
 	display: block;
   animation: spin 2s linear infinite;
 	transition: 0.5s;
@@ -605,6 +607,7 @@ footer {
 
   .carousel-container {
     min-width: 800px;
+    margin-bottom: 35px;
   }
 
   .tablet-details {
