--- a/styles.css
+++ b/styles.css
@@ -405,8 +405,7 @@ a {
 /*-------------------------------------------*\
           INTERACT.HTML / CHARTS.JS
 \*-------------------------------------------*/
-.chart-container,
-.movie-container {
+.chart-container {
   display: flex;
   flex-direction: column;
   background-image: linear-gradient(76deg, #161616 20%, #303030 74%);
@@ -453,7 +452,7 @@ svg {
 	/* position: fixed; */
 	/* left: calc(50vw - 0.5em); */
 	/* top: calc(40vw - 0.5em); */
-  margin: 100px 700px;
+  margin: 10vw 45vw;
 	display: block;
   animation: spin 2s linear infinite;
 	transition: 0.5s;
@@ -462,6 +461,36 @@ svg {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.movie-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-image: linear-gradient(76deg, #2c2c2c 20%, #323232 74%);
+  border-radius: 30px;
+  margin: 15px 20px 60px;
+  padding: 20px;
+  min-width: 200px;
+}
+
+.movie-container h3 {
+  margin: 5px 0;
+  color: #d7d7d7;
+}
+
+.movie-container p {
+  margin: 10px 0;
+  padding: 10px;
+  background-color: #1c1c1c;
+  color: #afafaf;
+  border-radius: 20px;
+}
+
+.movie-poster {
+  margin: 15px;
+  width: 200px;
+  border-radius: 20px;
 }
 
 
